--- a/bifrost-api/Containerfile
+++ b/bifrost-api/Containerfile
@@ -3,6 +3,7 @@ FROM registry.access.redhat.com/ubi9/go-toolset AS builder
 
 WORKDIR /app
 
+USER 0
 # Copia os arquivos do projeto
 COPY go.mod .
 COPY go.sum .
