--- a/bifrost-frontend/Containerfile
+++ b/bifrost-frontend/Containerfile
@@ -4,7 +4,7 @@ FROM registry.access.redhat.com/ubi9/nodejs-18 AS builder
 WORKDIR /app
 
 # Copia package.json e package-lock.json
-COPY package.json package-lock.json ./
+COPY package.json ./
 
 # Instala dependências
 RUN npm install
