--- a/bifrost-frontend/Containerfile
+++ b/bifrost-frontend/Containerfile
@@ -2,35 +2,31 @@
 FROM registry.access.redhat.com/ubi9/nodejs-18 AS builder
 
 WORKDIR /app
-
 USER 0
 
-# Copia package.json e package-lock.json
 COPY package.json ./
-
-# Instala dependências
 RUN npm install
 
-# Copia o resto do código
 COPY . .
-
-# Build de produção
 RUN npm run build
 
 # Stage 2: minimal image with nginx
 FROM registry.access.redhat.com/ubi9/nginx-120
 
-# Remove a config default do nginx
-RUN rm -f /etc/nginx/default.d/*.conf
+USER 0
 
-# Copia os arquivos buildados para o nginx
-COPY --from=builder /app/build /usr/share/nginx/html
+# Limpa pasta html padrão para garantir zero lixo antigo
+RUN rm -rf /usr/share/nginx/html/*
+
+# Copia arquivos buildados
+COPY --from=builder /app/build/ /usr/share/nginx/html/
 
 # Configuração customizada do nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Expõe porta padrão
+# Corrige permissões (muito importante no UBI)
+RUN chmod -R 755 /usr/share/nginx/html
+
 EXPOSE 8080
 
-# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
