--- a/bifrost-frontend/package.json
+++ b/bifrost-frontend/package.json
@@ -2,10 +2,11 @@
   "name": "bifrost-frontend",
   "version": "1.0.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.3",
