--- a/bifrost-frontend/Containerfile
+++ b/bifrost-frontend/Containerfile
@@ -1,32 +1,41 @@
-# Stage 1: build React app
+# Stage 1: Build React app
 FROM registry.access.redhat.com/ubi9/nodejs-18 AS builder
 
 WORKDIR /app
 USER 0
 
-COPY package.json ./
+# Copia package.json e instala dependências
+COPY package.json package-lock.json ./
 RUN npm install
 
+# Copia código-fonte restante
 COPY . .
-RUN npm run build
 
-# Stage 2: minimal image with nginx
+# Gera build de produção, usando API configurável via env
+RUN REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost:8080} npm run build
+
+# Debug opcional: listar build gerado
+RUN ls -lh build/
+
+# Stage 2: nginx minimal para servir frontend
 FROM registry.access.redhat.com/ubi9/nginx-120
 
 USER 0
 
-# Limpa pasta html padrão para garantir zero lixo antigo
+# Limpa HTML padrão
 RUN rm -rf /usr/share/nginx/html/*
 
-# Copia arquivos buildados
+# Copia build gerado do React
 COPY --from=builder /app/build/ /usr/share/nginx/html/
 
-# Configuração customizada do nginx
+# Copia configuração nginx customizada
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Corrige permissões (muito importante no UBI)
+# Corrige permissões (caso necessário)
 RUN chmod -R 755 /usr/share/nginx/html
 
+# Expõe porta padrão nginx
 EXPOSE 8080
 
+# Start nginx em foreground
 CMD ["nginx", "-g", "daemon off;"]
