--- a/bifrost-frontend/Containerfile
+++ b/bifrost-frontend/Containerfile
@@ -4,9 +4,8 @@ FROM registry.access.redhat.com/ubi9/nodejs-18 AS builder
 WORKDIR /app
 USER 0
 
-# Recebe o argumento de build
+# Recebe argumento do build
 ARG REACT_APP_API_URL
-ENV REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost:8080}
 
 # Copia package.json e instala dependências
 COPY package.json package-lock.json ./
@@ -15,24 +14,22 @@ RUN npm install
 # Copia código-fonte restante
 COPY . .
 
-# Gera build de produção, usando API configurável via env
-RUN echo "Building with REACT_APP_API_URL=${REACT_APP_API_URL}" && npm run build
+# Gera build passando a variável explicitamente
+RUN echo "Building with REACT_APP_API_URL=${REACT_APP_API_URL}" && \
+    REACT_APP_API_URL=${REACT_APP_API_URL} npm run build
 
-# Debug opcional: listar build gerado
-RUN ls -lh build/
-
-# Stage 2: nginx minimal para servir frontend
+# Stage 2: nginx minimal
 FROM registry.access.redhat.com/ubi9/nginx-120
 
 USER 0
 
-# Limpa HTML padrão
+# Limpa html padrão
 RUN rm -rf /usr/share/nginx/html/*
 
-# Copia build gerado do React
+# Copia build gerado
 COPY --from=builder /app/build/ /usr/share/nginx/html/
 
-# Copia configuração nginx customizada
+# Copia nginx.conf customizado
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Corrige permissões
