--- a/bifrost-frontend/Containerfile
+++ b/bifrost-frontend/Containerfile
@@ -1,39 +1,19 @@
-# Stage 1: Build React app
-FROM registry.access.redhat.com/ubi9/nodejs-18 AS builder
-
-WORKDIR /app
-USER 0
-
-# Recebe argumento do build
-ARG REACT_APP_API_URL
-
-# Copia package.json e instala dependências
-COPY package.json package-lock.json ./
-RUN npm install
-
-# Copia código-fonte restante
-COPY . .
-
-# Gera build passando a variável explicitamente
-RUN echo "Building with REACT_APP_API_URL=${REACT_APP_API_URL}" && \
-    REACT_APP_API_URL=${REACT_APP_API_URL} npm run build
-
-# Stage 2: nginx minimal
 FROM registry.access.redhat.com/ubi9/nginx-120
 
 USER 0
 
-# Limpa html padrão
+# Limpa html padrão do nginx
 RUN rm -rf /usr/share/nginx/html/*
 
-# Copia build gerado
-COPY --from=builder /app/build/ /usr/share/nginx/html/
+# Copia build PRONTO (você já fez no host!)
+COPY build/ /usr/share/nginx/html/
 
-# Copia nginx.conf customizado
+# Corrige permissões para nginx poder ler
+RUN find /usr/share/nginx/html -type f -exec chmod 644 {} \; && \
+    find /usr/share/nginx/html -type d -exec chmod 755 {} \;
+
+# Copia nginx.conf customizado (se tiver)
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-# Corrige permissões
-RUN chmod -R 755 /usr/share/nginx/html
 
 EXPOSE 8080
 
