--- a/bifrost-frontend/Containerfile
+++ b/bifrost-frontend/Containerfile
@@ -1,20 +1,46 @@
+# Stage 1: Build React app
+FROM registry.access.redhat.com/ubi9/nodejs-18 AS builder
+
+WORKDIR /app
+USER 0
+
+# Recebe argumento do build (para passar a API correta)
+ARG REACT_APP_API_URL
+
+# Copia package.json e package-lock.json
+COPY package.json package-lock.json ./
+
+# Instala dependências
+RUN npm install
+
+# Copia código-fonte restante
+COPY . .
+
+# Build com variável explícita no comando (não só no ENV)
+RUN echo "Building with REACT_APP_API_URL=${REACT_APP_API_URL}" && \
+    REACT_APP_API_URL=${REACT_APP_API_URL} npm run build
+
+# Stage 2: nginx minimal para servir frontend
 FROM registry.access.redhat.com/ubi9/nginx-120
 
 USER 0
 
-# Limpa html padrão do nginx
+# Limpa html padrão
 RUN rm -rf /usr/share/nginx/html/*
 
-# Copia build PRONTO (você já fez no host!)
-COPY build/ /usr/share/nginx/html/
+# Copia build gerado do React
+COPY --from=builder /app/build/ /usr/share/nginx/html/
 
-# Corrige permissões para nginx poder ler
-RUN find /usr/share/nginx/html -type f -exec chmod 644 {} \; && \
+# Corrige dono para o usuário nginx e permissões
+RUN chown -R nginx:nginx /usr/share/nginx/html && \
+    find /usr/share/nginx/html -type f -exec chmod 644 {} \; && \
     find /usr/share/nginx/html -type d -exec chmod 755 {} \;
 
-# Copia nginx.conf customizado (se tiver)
+# Copia configuração customizada do nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
+# Expõe a porta padrão
 EXPOSE 8080
 
+# Rodar nginx em foreground
 CMD ["nginx", "-g", "daemon off;"]
