--- a/bifrost-frontend/Containerfile
+++ b/bifrost-frontend/Containerfile
@@ -2,9 +2,8 @@
 FROM registry.access.redhat.com/ubi9/nodejs-18 AS builder
 
 WORKDIR /app
-USER 0
 
-# Recebe argumento do build (para passar a API correta)
+# Recebe argumento do build
 ARG REACT_APP_API_URL
 
 # Copia package.json e package-lock.json
@@ -16,29 +15,32 @@ RUN npm install
 # Copia código-fonte restante
 COPY . .
 
-# Build com variável explícita no comando (não só no ENV)
+# Faz build com variável explícita
 RUN echo "Building with REACT_APP_API_URL=${REACT_APP_API_URL}" && \
     REACT_APP_API_URL=${REACT_APP_API_URL} npm run build
 
 # Stage 2: nginx minimal para servir frontend
 FROM registry.access.redhat.com/ubi9/nginx-120
 
-# Limpa html padrão
-RUN rm -rf /usr/share/nginx/html/*
+# Define novo local para os arquivos (fora do padrão nginx)
+ENV APP_ROOT=/opt/app-root/html
 
-# Copia build gerado do React
-COPY --from=builder /app/build/ /usr/share/nginx/html/
+# Cria diretório alternativo
+RUN mkdir -p ${APP_ROOT}
 
-# Corrige dono para o usuário nginx e permissões
-RUN chown -R nginx:nginx /usr/share/nginx/html && \
-    find /usr/share/nginx/html -type f -exec chmod 644 {} \; && \
-    find /usr/share/nginx/html -type d -exec chmod 755 {} \;
+# Copia build gerado do React para o novo local
+COPY --from=builder /app/build/ ${APP_ROOT}/
+
+# Corrige dono e permissões para o usuário nginx
+RUN chown -R nginx:nginx ${APP_ROOT} && \
+    find ${APP_ROOT} -type f -exec chmod 644 {} \; && \
+    find ${APP_ROOT} -type d -exec chmod 755 {} \;
 
 # Copia configuração customizada do nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Expõe a porta padrão
+# Não define USER root explicitamente → nginx vai rodar como 'nginx'
+# Expondo porta padrão
 EXPOSE 8080
 
-# Rodar nginx em foreground
 CMD ["nginx", "-g", "daemon off;"]
