--- a/bifrost-frontend/Containerfile
+++ b/bifrost-frontend/Containerfile
@@ -30,7 +30,7 @@ RUN chown -R nginx:nginx /usr/share/nginx/html /var/lib/nginx /var/log/nginx /ru
     find /usr/share/nginx/html -type f -exec chmod 644 {} \; && \
     find /usr/share/nginx/html -type d -exec chmod 755 {} \;
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/nginx.conf
 
 USER nginx
 
