--- a/bifrost-frontend/nginx.conf
+++ b/bifrost-frontend/nginx.conf
@@ -1,11 +1,31 @@
-server {
-    listen       8080;
-    server_name  localhost;
+user nginx;
+worker_processes auto;
 
-    root /usr/share/nginx/html;
-    index index.html;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
-    location / {
-        try_files $uri /index.html;
+events {
+    worker_connections 1024;
+}
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    keepalive_timeout 65;
+
+    include /etc/nginx/conf.d/*.conf;
+
+    server {
+        listen       8080;
+        server_name  localhost;
+
+        root /usr/share/nginx/html;
+        index index.html;
+
+        location / {
+            try_files $uri /index.html;
+        }
     }
 }
