--- a/bifrost-agent/bifrost-agent.service
+++ b/bifrost-agent/bifrost-agent.service
@@ -1,14 +1,20 @@
 [Unit]
-Description=Bifrost Agent Python Service
-After=network.target
+Description=Bifrost Agent Service
+After=network.target libvirtd.service
 
 [Service]
 Type=simple
-WorkingDirectory=/opt/bifrost-agent
+User=root
+Environment="BIFROST_API_URL=http://192.168.86.129:8080/api/v1/vms"
+Environment="INFINISPAN_URL=http://192.168.86.129:11222/rest/v2/caches/vm-actions"
+Environment="INFINISPAN_USER=myuser"
+Environment="INFINISPAN_PASS=mypass"
 ExecStart=/usr/bin/python3 /opt/bifrost-agent/bifrost-agent.py
-Restart=always
+WorkingDirectory=/opt/bifrost-agent
+StandardOutput=append:/var/log/bifrost/bifrost-agent.log
+StandardError=append:/var/log/bifrost/bifrost-agent.log
+Restart=on-failure
 RestartSec=10
-Environment="API_ENDPOINT=http://localhost:8080/api/v1/vms"
 
 [Install]
 WantedBy=multi-user.target
