--- a/bifrost-frontend/package.json
+++ b/bifrost-frontend/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
