--- a/bifrost-frontend/package.json
+++ b/bifrost-frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bifrost-frontend",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "description": "Frontend para o Bifrost VM Dashboard",
   "scripts": {
@@ -10,18 +10,20 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "lucide-react": "^0.293.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.3",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "browserslist": {
     "production": [
